# ruby-hunspell

./: .gitignore  AUTHORS  CMakeLists.txt  GIT-BRANCHES  Makefile  README  README.charset  hunspell.cc  tarball.sh
cmake/: FindRust.cmake
extra/: visibility-test.c
generator/: class.rb  conversions.h  description.yml  function.rb  generator.rb  method.rb
hunspell/: CMakeLists.txt  conversions.h  customs.cc  hunspell.rb  hunspell.yml  parsers.rb  parsers.yml
hunspell/parsers/: CMakeLists.txt  parsers.yml
parsers/: CMakeLists.txt  parsers.yml
src/: extension.cc  extension.hh  hunspell.cc
tests/: CMakeLists.txt  textparser.rb
