SET(GENERATOR_PATH ${CMAKE_SOURCE_DIR}/generator)
ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/hunspell.cc
		${CMAKE_CURRENT_BINARY_DIR}/hunspell.hh
	COMMAND ${RUBY_EXECUTABLE}
	ARGS -I${GENERATOR_PATH} -C${CMAKE_CURRENT_BINARY_DIR}
		${GENERATOR_PATH}/generator.rb ${CMAKE_CURRENT_SOURCE_DIR}/hunspell.yml
	DEPENDS ${GENERATOR_PATH}/generator.rb ${GENERATOR_PATH}/class.rb
		${GENERATOR_PATH}/method.rb ${GENERATOR_PATH}/namespace.rb
		${GENERATOR_PATH}/function.rb
		${CMAKE_CURRENT_SOURCE_DIR}/hunspell.yml )

ADD_LIBRARY(hunspell MODULE ${CMAKE_CURRENT_BINARY_DIR}/hunspell.cc
		     	    ${CMAKE_CURRENT_SOURCE_DIR}/customs.cc)
SET_TARGET_PROPERTIES(hunspell PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(hunspell ${HUNSPELL_LIBRARY})

SET(CMAKE_INSTALL_PREFIX "")
INSTALL_TARGETS(${RUBY_ARCH_DIR} hunspell)
ADD_SUBDIRECTORY(parsers)
