ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/hunspell.cc
		${CMAKE_CURRENT_BINARY_DIR}/hunspell.hh
	COMMAND ${RUBY_EXECUTABLE}
	ARGS -C${CMAKE_CURRENT_BINARY_DIR} ${RUST_SOURCE_PATH}
		${CMAKE_CURRENT_SOURCE_DIR}/hunspell.rb
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/hunspell.rb )

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/parsers.cc
		${CMAKE_CURRENT_BINARY_DIR}/parsers.hh
	COMMAND ${RUBY_EXECUTABLE}
	ARGS -C${CMAKE_CURRENT_BINARY_DIR} ${RUST_SOURCE_PATH}
		${CMAKE_CURRENT_SOURCE_DIR}/parsers.rb
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/parsers.rb )

ADD_LIBRARY(hunspell MODULE ${CMAKE_CURRENT_BINARY_DIR}/hunspell.cc)
SET_TARGET_PROPERTIES(hunspell PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(hunspell ${HUNSPELL_LIBRARY})

ADD_LIBRARY(parsers MODULE ${CMAKE_CURRENT_BINARY_DIR}/parsers.cc)
SET_TARGET_PROPERTIES(parsers PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(parsers ${HUNSPELL_PARSERS_LIBRARY})

INSTALL(TARGETS hunspell DESTINATION ${RUBY_ARCH_DIR})
INSTALL(TARGETS parsers DESTINATION ${RUBY_ARCH_DIR}/hunspell)
